# tloc2

./: .gitignore  README.md  main2.c  saida.csv  write_csv.sh
firmware/: CMakeLists.txt  build.sh  firmware.ino  nix-build.sh
firmware/.cache/clangd/index/: esp.h.F4F4082EC658AB58.idx  jlinear.h.D19A35D8A74290BE.idx  jloc2.h.4B8A7C91EDC71331.idx  jthio.h.406746188ECDCAF1.idx  main.c.77D5AA741015A9C1.idx  tcp_debug.h.C24EBFD3B9ED6248.idx
firmware/main/: CMakeLists.txt  jloc2.c  jloc2.h  jloc_sim.c  main.c  main.ino  tcp_debug.h
firmware/main/lib/: esp.c  esp.h  jlinear.c  jlinear.h  jthio.c  jthio.h  tcp_debug.c  tcp_debug.h
tools/: client.java  client_debug.py  flake.nix
